        Reviewed by Sam Weinig.

REGRESSION: undo-iframe-location-change.html is failing on the buildbots
        https://bugs.webkit.org/show_bug.cgi?id=24626

        Added a call to [[webview undoManager] removeAllActions]
        to make sure anything left on the undo stack after one test
        will not affect any later test.

        * DumpRenderTree/mac/DumpRenderTree.mm:
        (resetWebViewToConsistentStateBeforeTesting):

Canonical link: https://commits.webkit.org/33797@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41740 268f45cc-cd09-0410-ab3c-d52691b4dbfc